<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.StartActivity"
    tools:showIn="@layout/activity_start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:textSize="40sp"
        android:textColor="#5e5c5c"
        android:layout_above="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_toLeftOf="@+id/button" />

    <Button
        android:layout_width="@dimen/zwidth"
        android:layout_height="@dimen/zzzheight"
        android:id="@+id/button"
        android:onClick="changeToTripPlanActivity"
        android:background="@drawable/button"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:text="@string/routeplaner" />

    <Button
        android:layout_width="@dimen/zwidth"
        android:layout_height="@dimen/zzzheight"
        android:id="@+id/button2"
        android:onClick="changeToVilshofenMap"
        android:background="@drawable/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:text="@string/map" />

    <Button
        android:layout_width="@dimen/zwidth"
        android:layout_height="@dimen/zzzheight"
        android:id="@+id/choose_sight"
        android:onClick="changeToChooseSightActivity"
        android:background="@drawable/button"
        android:layout_below="@+id/button3"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:textColor="#ffffff"
        android:text="@string/sights" />

    <Button
        android:layout_width="@dimen/zwidth"
        android:layout_height="@dimen/zzzheight"
        android:onClick="changeToChoosePredefinedRouteActivity"
        android:id="@+id/button3"
        android:background="@drawable/button"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:text="@string/predefined_routes_label" />

    <ImageView
        android:layout_width="@dimen/aaaaa"
        android:layout_height="@dimen/aabb"
        android:id="@+id/imageView4"
        android:src="@drawable/logo3"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

</RelativeLayout>
