<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_trip_plan"
    tools:context="com.example.simon.vilshofenguide.view.TripPlanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/calculated_departure_time"
        android:layout_above="@+id/route_list"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_trip_time"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/arrival_place"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/departure_place"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/focus"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/departure_place"
        android:layout_alignStart="@+id/departure_place"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_route"
        android:id="@+id/calculate_route"
        android:onClick="calculateRoute"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:id="@+id/trip_time"
        android:layout_alignRight="@+id/trip_time"
        android:layout_alignEnd="@+id/trip_time"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrival_place"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignRight="@+id/calculated_departure_time"
        android:layout_alignEnd="@+id/calculated_departure_time"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/departure_place"
        android:id="@+id/textView6"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/departure_place"
        android:layout_toStartOf="@+id/departure_place" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/arrival_place"
        android:id="@+id/textView5"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/arrival_place"
        android:layout_toStartOf="@+id/arrival_place" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/focus"
        android:id="@+id/textView7"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/departure_place"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/aaa"
        android:layout_height="wrap_content"
        android:text="@string/view_route_on_map"
        android:id="@+id/view_route_on_map"
        android:onClick="viewOnMap"
        android:background="@color/a61919"
        android:textColor="#ffffff"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/route_list"
        android:layout_below="@+id/calculate_route"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/view_route_on_map" />

</RelativeLayout>
